--- a/index.html
+++ b/index.html
@@ -30,13 +30,42 @@
 
     </div>
     <script>
-        let element = document.querySelector("body");
-        const recognition = new (window.webkitSpeechRecognition);
-        recognition.lang = "en-GB";
-        recognition.continuous = true;
-        document.onclick = recognition.start();
-        recognition.onresult = (event) => { for (const result of event.result) { element.innerText = result[0].transcript; } }
-        (event) => { for (const result of event.result) { element.innerText = result[0].transcript; } }
+       document.addEventListener("DOMContentLoaded", () => {
+    const element = document.querySelector("body");
+    const recognition = new (window.SpeechRecognition || window.webkitSpeechRecognition)();
+
+    // Set the language and continuous listening mode
+    recognition.lang = "en-GB";
+    recognition.continuous = true;
+
+    // Start recognition when the document is clicked
+    document.addEventListener("click", () => {
+        recognition.start();
+        console.log("Speech recognition started...");
+    });
+
+    // Handle speech recognition results
+    recognition.onresult = (event) => {
+        let transcript = ""; // Collect all final results
+        for (let i = 0; i < event.results.length; i++) {
+            if (event.results[i].isFinal) {
+                transcript += event.results[i][0].transcript + " ";
+            }
+        }
+        element.innerText = transcript.trim(); // Display the recognized text
+    };
+
+    // Optional: Handle recognition errors
+    recognition.onerror = (event) => {
+        console.error("Speech recognition error:", event.error);
+    };
+
+    // Log when recognition stops
+    recognition.onend = () => {
+        console.log("Speech recognition stopped. Click to restart.");
+    };
+});
+
     </script>
 </body>
 
