--- a/index.html
+++ b/index.html
@@ -12,15 +12,17 @@
             padding: 0;
             box-sizing: border-box;
             max-width: 100%;
-        }
-
-        .container {
-            height: 100vh;
-            width: 100vw;
-            color: #f5f5f5;
             display: grid;
             place-items: center;
             text-align: center;
+            color: #f5f5f5;
+            font: sans-serif;
+        }
+
+        .container {
+            height: 50vh;
+            width: 50vw;
+            
         }
     </style>
 </head>
