--- a/index.html
+++ b/index.html
@@ -1,74 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <style>
-        body {
-            background-color: #000;
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-            max-width: 100%;
-            display: grid;
-            place-items: center;
-            text-align: center;
-            color: #f5f5f5;
-            font: sans-serif;
-        }
-
-        .container {
-            height: 50vh;
-            width: 50vw;
-            
-        }
-    </style>
+    <link rel="stylesheet" href="./styles.css">
+    <title>Speech Transcription</title>
 </head>
-
-<body>
-    <div class="container">
-
+<body class="light">
+    <div class="right">
+        <div class="text" onclick="toggleMode();">Dark Mode</div>
+        <div class="toggle"><div class="slider" id="slider" onclick="toggleMode();"></div></div>
     </div>
-    <script>
-       document.addEventListener("DOMContentLoaded", () => {
-    const element = document.querySelector("body");
-    const recognition = new (window.SpeechRecognition || window.webkitSpeechRecognition)();
-
-    // Set the language and continuous listening mode
-    recognition.lang = "en-GB";
-    recognition.continuous = true;
-
-    // Start recognition when the document is clicked
-    document.addEventListener("click", () => {
-        recognition.start();
-        console.log("Speech recognition started...");
-    });
-
-    // Handle speech recognition results
-    recognition.onresult = (event) => {
-        let transcript = ""; // Collect all final results
-        for (let i = 0; i < event.results.length; i++) {
-            if (event.results[i].isFinal) {
-                transcript += event.results[i][0].transcript + " ";
-            }
-        }
-        element.innerText = transcript.trim(); // Display the recognized text
-    };
-
-    // Optional: Handle recognition errors
-    recognition.onerror = (event) => {
-        console.error("Speech recognition error:", event.error);
-    };
-
-    // Log when recognition stops
-    recognition.onend = () => {
-        console.log("Speech recognition stopped. Click to restart.");
-    };
-});
-
-    </script>
+    <div class="container" id="container">
+        <h1>Speech to Text</h1>
+        <p class="instructions">Click the button below and start speaking. Your speech will be transcribed here.</p>
+        <div class="output" id="output">Your transcript will appear here...</div>
+        <button id="start-btn">Start Listening</button>
+    </div>
+   <script src="index.js"></script>
 </body>
-
 </html>
